--- 1.6 2014-02-11 ---
*** bosixnet-webui ***
* Removed support of POST requests.

--- 1.5 2014-02-05 ---
* Changed default user in webui_launcher from "user" to "bosixnet".
* Added man pages, updated README and fixed few typos in help.
* Renamed BASIC_URL variable to BASIC_STR.

--- 1.4 2014-02-04 ---
* Improved update_hosts: only strings with IPv6 addresses is copied into
  /etc/hosts, all rest data is ignored now.
* Small code refactoring in scripts: bosixnet_daemon, update_address,
  update_hosts, webui_launcher.

--- 1.3 2014-02-04 ---
* Small fix in bosixnet_daemon: send some useless warnings to /dev/null.
* Tiny fix in LOG_DIR variable.

--- 1.2 2014-02-04 ---
* Rewritten init scripts.
* Added script daemon_launcher.
* Updated script webui_launcher.

--- 1.1 2014-02-04 ---
* Update init scripts.

--- 1.0 2014-02-03 ---
* Changed version numbering scheme.
* Project was rewritten from qmake to cmake.
* Program bosixnet-webui was rewritten from QtCore 4.x to pure STL.
* Added support of config files into scripts: bosixnet_daemon, update_address,
  update_hosts and webui_launcher.
* Updated README.

--- 0.0.1 2013-10-17 ---
* Initial release.